Implementing enrollments api
